--- a/views/about.hbs
+++ b/views/about.hbs
@@ -439,7 +439,8 @@
 
                    </div>
                  </div>
-               </section>
+               </div>
+             </section>
            </section>
 
            <section class="bg-secondary panel">
