--- a/views/about.hbs
+++ b/views/about.hbs
@@ -490,6 +490,12 @@
       </div> <!-- end of desktop main container -->
 
 
+      <!-- ====================================================================
+      =========================================================================
+      ==================beginning of main mobile view container ===============
+    =================================================================================
+  ==================================================================================-->
+
       <!-- beginning of main mobile view container -->
       <section class="mobile-main">
         <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary panel background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
