home page 90 percent finished

--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -97,74 +97,66 @@
 
 
      <section class="panel">
-
-       <style media="screen">
-       .card {
-         padding:2rem;
-         width:33%;
-         text-align: center;
-       }
-       .card a {
-         text-align: center;
-       }
-       .card:hover {
-         background-color: #811;
-       }
-       .active {
-         transition-timing-function: ease-in;
-         transition: 0.2s;
-         transform: scale(1.1);
-         background-color: #6C6C6C;
-         filter: drop-shadow(0 0 1.75rem white);
-         z-index: 2;
-         width:33%;
-         text-align: center;
-       }
-       .active img {
-         margin-top: 3rem;
-       }
-
-       </style>
-
        <section class="partnersBlock h-screen w-full mb-64">
+         <section class="text-gray-700 body-font">
+           <div class="container px-5 mt-16 mx-auto">
+             <div class="text-center mb-20">
+               <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
+               <div class="flex mt-6 justify-center">
+                 <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
+               </div>
+             </div>
+             <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
 
-
-         <section class="text-gray-700 body-font bg-secondary">
-           <div class="container px-5 mx-auto">
-             <h2 class="mt-16 text-center title-font font-sans text-3xl text-primary tracking-wider font-semibold">Why Codex?</h2>
-             <div class="md:flex flex-wrap -m-4 lg:mt-16">
-               <div id="card" class="card p-4 md:w-1/3  hover:bg-red-800">
-                 <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                   <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/turbine.png" alt="blog">
-                   <div class="p-6">
-                     <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-6 uppercase"> Personalize Training</h1>
-                     <a id="clickHereLeft" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
-                   </div>
+               <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                 <div class="w-20 h-20 inline-flex items-center justify-center mb-5 flex-shrink-0">
+                   <img src="../public/img/lightning.png" alt="">
+                 </div>
+                 <div class="flex-grow text-primary">
+                   <h2 class="text-gray-900 text-lg title-font font-medium mb-3 uppercase text-primary">Codex </h2>
+                   <p class="leading-relaxed text-base">
+                     VINCI's flagship software, CODEX, enables instructors to rapidly create and edit their own training simulations.</p>
+                   <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                       <path d="M5 12h14M12 5l7 7-7 7"></path>
+                     </svg>
+                   </a>
                  </div>
                </div>
-               <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                 <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                   <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/jet.png" alt="blog">
-                   <div class="p-6">
-                     <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-4 uppercase">Built for VR</h1>
-                     <p class="text-sm text-primary text-center font-light mb-2 tracking-wider">VR is cheaper, safer, yet as realistic as real equipment.</p>
-                     <a id="whyCodex" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">See why Codex is better.</a>
-                   </div>
+
+               <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                 <div class="w-20 h-20 inline-flex items-center justify-center  mb-5 flex-shrink-0">
+                    <img class="object-fill" src="../public/img/affordable.png" alt="">
+                 </div>
+                 <div class="flex-grow text-primary">
+                   <h2 class="text-gray-900 text-lg title-font font-medium mb-3 text-primary">Low Cost</h2>
+                   <p class="leading-relaxed text-base">VINCI creates proprietary software and utilizes consumer hardware to lower the cost of creating and using VR.</p>
+                   <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                       <path d="M5 12h14M12 5l7 7-7 7"></path>
+                     </svg>
+                   </a>
                  </div>
                </div>
 
-               <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                 <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                   <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/soldier.png" alt="blog">
-                   <div class="p-6">
-                     <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-6 uppercase">Scalable & <br> Relevant</h1>
-                     <a id="clickHereRight" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
-                   </div>
+               <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                 <div class="w-20 h-20 inline-flex items-center justify-center mb-5 flex-shrink-0 back" >
+                    <img class="cover" src="../public/img/group.png" alt="">
+                 </div>
+                 <div class="flex-grow text-primary">
+                   <h2 class="text-gray-900 text-lg title-font font-medium mb-3 text-primary">Client Centric</h2>
+                   <p class="leading-relaxed text-base">VINCI’s partners take the front seat; by working closely with your workforce, we can build the best simulations.</p>
+                   <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                       <path d="M5 12h14M12 5l7 7-7 7"></path>
+                     </svg>
+                   </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
+
        </section>
      </section>
 
@@ -359,14 +351,14 @@
               <hr class="mt-4 w-3/4 mx-auto">
             </h3>
             <br>
-             <h1 class="font-sans font-black -mb-20 -mt-6 text-2xl "> WITH A WORLD OF YOUR OWN
-              <hr class=" w-3/4 mx-auto mb-10">
+             <h1 class="font-sans font-black -mb-16 -mt-4 text-2xl "> WITH A WORLD OF YOUR OWN
+              <hr class=" w-3/4 mx-auto mt-2 mb-10">
             </h1>
            <h3 class="font-sans pt-12 sm:my-8 text-xl mb-24">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
            <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 text-sm" href="/services">Learn about our services</a>
     ​
-    ​       <p class=" down-arrow text-4xl mt-40">⌄</p>
+    ​       <p class=" down-arrow text-4xl mt-20">⌄</p>
           </section>
 
         </section>
@@ -397,87 +389,74 @@
                </aside>
             </div>
            </section>
-     </section>
-
-
-     <section class="panel">
-
-       <style media="screen">
-       .card {
-         padding:2rem;
-         width:33%;
-         text-align: center;
-       }
-       .card a {
-         text-align: center;
-       }
-       .card:hover {
-         background-color: #811;
-       }
-       .active {
-         transition-timing-function: ease-in;
-         transition: 0.2s;
-         transform: scale(1.1);
-         background-color: #6C6C6C;
-         filter: drop-shadow(0 0 1.75rem white);
-         z-index: 2;
-         width:33%;
-         text-align: center;
-       }
-       .active img {
-         margin-top: 3rem;
-       }
-
-       </style>
-
-       <section class="partnersBlock h-screen w-full mb-64">
-
-
-         <section class="text-gray-700 body-font bg-secondary">
-           <div class="container px-5 mx-auto">
-             <h2 class="mt-16 text-center title-font font-sans text-3xl text-primary tracking-wider font-semibold">Why Codex?</h2>
-             <div class="md:flex flex-wrap -m-4 lg:mt-16">
-               <div id="card" class="card p-4 md:w-1/3  hover:bg-red-800">
-                 <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                   <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/turbine.png" alt="blog">
-                   <div class="p-6">
-                     <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-6 uppercase"> Personalize Training</h1>
-                     <a id="clickHereLeft" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
-                   </div>
-                 </div>
-               </div>
-               <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                 <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                   <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/jet.png" alt="blog">
-                   <div class="p-6">
-                     <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-4 uppercase">Built for VR</h1>
-                     <p class="text-sm text-primary text-center font-light mb-2 tracking-wider">VR is cheaper, safer, yet as realistic as real equipment.</p>
-                     <a id="whyCodex" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">See why Codex is better.</a>
-                   </div>
-                 </div>
-               </div>
-
-               <div id="card" class="card p-4 md:w-1/3 hover:bg-red-800">
-                 <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                   <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/soldier.png" alt="blog">
-                   <div class="p-6">
-                     <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-6 uppercase">Scalable & <br> Relevant</h1>
-                     <a id="clickHereRight" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
          </section>
-       </section>
-     </section>
+
+         <section class="panel">
+           <section class="overflow-x-auto partnersBlock h-screen w-full mb-64">
+             <section class="text-gray-700 body-font">
+               <div class="container px-5 mt-16 mx-auto">
+                 <div class="text-center mb-20">
+                   <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
+                   <div class="flex mt-6 justify-center">
+                     <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
+                   </div>
+                 </div>
+                 <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
+
+                   <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                     <div class="w-20 h-20 inline-flex items-center justify-center mb-5 flex-shrink-0">
+                       <img src="../public/img/lightning.png" alt="">
+                     </div>
+                     <div class="flex-grow text-primary">
+                       <h2 class="text-gray-900 text-lg title-font font-medium mb-3 uppercase text-primary">Codex </h2>
+                       <p class="leading-relaxed text-base">
+                         VINCI's flagship software, CODEX, enables instructors to rapidly create and edit their own training simulations.</p>
+                       <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                           <path d="M5 12h14M12 5l7 7-7 7"></path>
+                         </svg>
+                       </a>
+                     </div>
+                   </div>
+
+                   <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                     <div class="w-20 h-20 inline-flex items-center justify-center  mb-5 flex-shrink-0">
+                        <img class="object-fill" src="../public/img/affordable.png" alt="">
+                     </div>
+                     <div class="flex-grow text-primary">
+                       <h2 class="text-gray-900 text-lg title-font font-medium mb-3 text-primary">Low Cost</h2>
+                       <p class="leading-relaxed text-base">VINCI creates proprietary software and utilizes consumer hardware to lower the cost of creating and using VR.</p>
+                       <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                           <path d="M5 12h14M12 5l7 7-7 7"></path>
+                         </svg>
+                       </a>
+                     </div>
+                   </div>
+
+                   <div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+                     <div class="w-20 h-20 inline-flex items-center justify-center mb-5 flex-shrink-0 back" >
+                        <img class="cover" src="../public/img/group.png" alt="">
+                     </div>
+                     <div class="flex-grow text-primary">
+                       <h2 class="text-gray-900 text-lg title-font font-medium mb-3 text-primary">Client Centric</h2>
+                       <p class="leading-relaxed text-base">VINCI’s partners take the front seat; by working closely with your workforce, we can build the best simulations.</p>
+                       <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                           <path d="M5 12h14M12 5l7 7-7 7"></path>
+                         </svg>
+                       </a>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </section>
+           </section>
+         </section>
 
 
       <section class="panel">
-
-        <section class="partnersBlock h-screen w-full mb-64">
-
-
+        <section class="overflow-x-auto partnersBlock h-screen w-full mb-64">
           <section class="text-gray-700 body-font bg-secondary">
             <div class="container px-5 mx-auto">
               <h2 class="mt-16 text-center title-font font-sans text-3xl text-primary tracking-wider font-semibold uppercase">Partners</h2>
@@ -517,19 +496,17 @@
       </section>
 
 
-      <section class="panel">
-        <!--==================
-         SPOTLIGHT SECTION
-        ==================-->
 
+      <!--==================
+       SPOTLIGHT SECTION
+      ==================-->
+      <section class="panel">
         <section class="panel spotlight h-screen w-full">
-          <h1 class="text-center text-3xl mt-32 uppercase font-sans font-black">Spotlight</h1>
+          <h1 class="text-center text-3xl mt-20 uppercase font-sans font-black">Spotlight</h1>
           <section class="spot-container flex justify-center p-12">
             <!-- <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FSheppardAirForceBase%2Fvideos%2F558267695076414%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
 
             <iframe width="860" height="615" src="https://www.youtube-nocookie.com/embed/NloJsABn8qM?vq=hd720" frameborder="0" allow="encrypted-media; picture-in-picture" allowfullscreen="true" controls="0"></iframe>
-
-
           </section>
         </section>
       </section>
@@ -546,11 +523,11 @@
              <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
                 <a class="flex flex-col justify-center" href="/blogs">
-                  <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+                  <button class="w-2/3 md:w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Check Out Our Blogs</button>
                 </a>
                 <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
                 <a class="flex flex-col justify-center" href="/contact">
-                <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+                <button class=" w-2/3 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Reach Out To Us</button>
                 </a>
              </div>
              <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
