--- a/views/services.hbs
+++ b/views/services.hbs
@@ -289,11 +289,279 @@
 
       <!-- beginning of main mobile view container -->
       <section class="mobile-main">
-        <section class="panel first">
-          <h1>Hi mobile view!</h1>
-        </section>
-        <section class="panel second">
-          <h1>Panel 2</h1>
+        <div class="main-wrapper">
+          <section class="panel">
+            <section class="hero-section h-screen w-full">
+              <style media="screen">
+                h1, h2, h3, h4, h5, h6 {
+                  font-family: "Montserrat", sans-serif !important;
+                }
+              </style>
+
+              <!--==================
+               NAV SECTION
+              ==================-->
+
+              <header class="text-gray-700 body-font ">
+                  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+                    <a href="/" class="flex items-center mb-4 md:mb-0">
+                      <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                    </a>
+                    <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                      <a href="/about" class="mr-5 hover:text-gray-900">About</a>
+                      <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
+                      <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
+                      <a href="/careers" class="mr-5 hover:text-gray-900">Careers</a>
+                      <a href="/blogs" class="mr-5 hover:text-gray-900">Blogs</a>
+                      <a href="/contact" class="mr-5 hover:text-gray-900">Contact</a>
+                    </nav>
+                  </div>
+              </header>
+              <hr class="-mt-4">
+
+
+                <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xlg:text-4xl uppercase font-sans font-semibold">Codex</h1>
+                <div class="tracking-widest text-left p-4 ml-50">
+                  <p>Access the entire codex suite or</p>
+                  <p>pick and choose which toolkits to use.</p>
+                </div>
+                </section>
+          </section>
+
+          <section class="panel bg-secondary">
+            <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
+              <h2 class="text-4xl text-left py-4 mx-4 font-medium font-sans">Educate Your Workforce Like Never Before</h2>
+              <hr class=" w-3/4 py-4 font-thin mx-4">
+              <section class="tracking-widest text-left mx-4">
+                <p>
+                  Instructors face limited time, high costs, and potential hazards during high consequence training. These limitations create a gap between the amount of time/repetitions needed for effective knowledge retention and the available opportunities to train.
+                </p>
+                <br>
+                <p>
+                  Codex not only brings powerful VR technologies to training, but the full suite of tools brings VR training to a whole new level. Create, train, and analyze simulations on next-gen VR platforms.
+                </p>
+                <br>
+                <p>
+                  Codex is modular: pick and choose different tools or integrate the entire suite of tools.
+                </p>
+              </section>
+            </section>
+          </section>
+
+          <section class="panel bg-secondary">
+            <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+              <section class="-ml-2 w-2/3">
+                <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans">Codex Authoring</h2>
+                <hr>
+                <h4 class="text-xl font-medium my-4">Fully Customize Your Simulations</h4>
+                <ul class="text-md">
+                  <li class="tracking-wider leading-loose">
+                    Fully customize simulations, such as interactions, instructional content, and training manuals as easily as Powerpoint.
+                  </li>
+                  <li class="tracking-wider leading-loose">
+                    Create new simulations & training scenarios in a few minutes with codex’s Automated Simulation creator
+                  </li>
+                  <li class="tracking-wider leading-loose">
+                    Deploy and store simulations globally on the cloud.
+                  </li>
+                </ul>
+              </section>
+              <div class="imgSize1">
+                <!--IMG IS IN THE CSS BCKGRND -->
+              </div>
+            </section>
+          </section>
+
+
+          <section class="panel bg-secondary">
+            <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+              <section class="-ml-2 w-2/3">
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Simulator</h1>
+                <hr>
+                <h4 class="text-xl font-medium my-4">Highly Realistic, Interactive VR</h4>
+                <ul>
+                  <li class="tracking-wider leading-loose">
+                    Train in highly Realistic 3D environments of simulations created in Codex Authoring.
+                  </li>
+                  <li class="tracking-wider leading-loose">
+                    Access multiple training modes automatically created from authoring data, including walkthroughs, performance tests, and scenarios.
+                  </li>
+                  <li class="tracking-wider leading-loose">
+                    Utilize pre-existing 3D models or access VINCI’s 3D model library and world class modeling service.
+                  </li>
+                </ul>
+             </section>
+              <div class="imgSize2">
+                <!--IMG IS IN THE CSS BCKGRND -->
+              </div>
+            </section>
+          </section>
+
+
+
+            <section class="panel bg-secondary">
+              <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+                <section class="-ml-2 w-2/3 ">
+                  <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Analytics</h1>
+                  <hr>
+                  <h4 class="text-xl font-medium my-4">Robust Data Analytics</h4>
+                  <ul>
+                    <li class="tracking-wider leading-loose">
+                        Live stream multiple student views as they train in VR.
+                    </li>
+                    <li class="tracking-wider leading-loose">
+                      Review video playbacks with timestamps of errors.
+                    </li>
+                    <li class="tracking-wider leading-loose">
+                      Gain insights into individual or classroom performance with data visualization and trend analysis.
+                    </li>
+                  </ul>
+                </section>
+                <div class="imgSize3">
+                  <!--IMG IS IN THE CSS BCKGRND -->
+                </div>
+              </section>
+            </section>
+
+            <section class="panel bg-secondary">
+              <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+                <section class="-ml-2 w-2/3 ">
+                  <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Leverage low-cost VR</h1>
+                  <hr>
+                  <h4 class="text-xl font-medium my-4"></h4>
+                  <ul>
+                    <li class="tracking-wider leading-loose">
+                      Realistic training at 10% of the cost physical simulators and enable more than 10X the number of repetitions.
+                    </li>
+                    <li class="tracking-wider leading-loose">
+                      Increase hands-on training time by hundreds of hours.
+                    </li>
+                    <li class="tracking-wider leading-loose">
+                      Utilize commercially available headsets like the Vive, Index, and Oculus Quest.
+                    </li>
+                  </ul>
+                </section>
+                <div class="imgSize4">
+                  <!--IMG IS IN THE CSS BCKGRND -->
+                </div>
+              </section>
+            </section>
+
+            <section class="panel bg-secondary">
+              <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+                <section class="-ml-2 w-2/3 ">
+                  <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Leverage low-cost VR</h1>
+                  <hr>
+                  <h4 class="text-xl font-medium my-4"></h4>
+                  <ul>
+                      <li class="tracking-wider leading-loose">
+                          Utilize smart insights from codex analytics to tailor training content to individual students.
+                      </li>
+                      <li class="tracking-wider leading-loose">
+                          Keep simulations relevant with field conditions quickly with codex authoring.
+                      </li>
+                  </ul>
+                </section>
+                <div class="imgSize5">
+                  <!--IMG IS IN THE CSS BCKGRND -->
+                </div>
+              </section>
+            </section>
+
+            <section class="panel bg-secondary">
+              <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+                <section class="-ml-2 w-2/3 ">
+                  <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Scalable Collaboration</h1>
+                  <hr>
+                  <h4 class="text-xl font-medium my-4"></h4>
+                  <ul>
+                      <li class="tracking-wider leading-loose">
+                        Enable an ecosystem of content by empowering your team to innovate and create.
+                      </li>
+                      <li class="tracking-wider leading-loose">
+                        Create different training objectives in the same environment to scale your library.
+                      </li>
+                  </ul>
+                </section>
+                <div class="imgSize6">
+                  <!--IMG IS IN THE CSS BCKGRND -->
+                </div>
+              </section>
+            </section>
+
+
+          <!-- <section class="panel bg-secondary">
+            <section class="contact">
+            <section class=" bg-center bg-covermb-4 panel background first" style="background-image: url('../public/img/contact-bg.png')">
+             <section class="text-gray-700 body-font relative">
+               <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
+                   <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
+                     <h2 class="text-primary text-3xl mb-1 font-semibold title-font text-left font-sans">Contact VINCI</h2>
+                     <hr class="w-4/5 mb-8">
+                     <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
+                     <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4 mt-2" placeholder="Email" type="email">
+      ​
+                     <textarea class="w-4/5 opacity-75 border focus:outline-none h-32 focus:border-indigo-500 text-base px-8 py-2 mb-4 mt-2 resize-none" placeholder="Message"></textarea>
+                     <button class=" mt-2 w-1/3 text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">send</button>
+                     <p class="text-xs text-gray-500 mt-3"></p>
+                   </div>
+      ​
+                   <div class="lg:w-1/3 md:w-1/2 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-end ml-10 relative bg-content h-56 mt-32 object-cover"
+                     <h2></h2>
+                     <img  class="" src="../public/img/placeholder.png" alt="">
+                     <img  class="mt-20" src="../public/img/placeholder.png" alt="">
+                   </div>
+                 </div>
+               </section>
+             </section>
+            </section>
+          </section> -->
+
+          <section class="bg-secondary panel">
+             <footer class="bg-secondary bg-bottom bg-cover text-primary body-font  p-4 md:mt-24 lg:mt-24" style="background-image: url('../public/img/contactbckgrnd.png')">
+               <h1 class ="text-primary text-center sm:text-4xl text-3xl font-sans">Want to Learn More About VR Training?</h1>
+               <div class="flex flex-col justify-center mt-24">
+                   <a class="flex flex-col justify-center" href="/blogs">
+                     <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+                   </a>
+                   <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
+                   <a class="flex flex-col justify-center" href="/contact">
+                     <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+                   </a>
+               </div>
+               <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+                 <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+                   <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+                 </div>
+                 <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+                   <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                     <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
+                     <nav class="list-none mb-10 -mt-24">
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/services">SOLUTIONS</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/partners">PARTNERS</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/careers">CAREERS</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/blogs">BLOGS</a>
+                       </li>
+                       <li>
+                         <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href=/contact"">CONTACT</a>
+                       </li>
+                     </nav>
+                   </div>
+                 </div>
+               </div>
+             </footer>
+          </section>
+        </div> 
         </section>   <!-- end of mobile container -->
 
        </section> <!-- end of panel container -->
