--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -169,10 +169,10 @@
           <section class="text-gray-700 body-font bg-secondary">
             <div class="container px-5 mx-auto">
               <h2 class="mt-16 text-center title-font font-sans text-3xl text-primary tracking-wider font-semibold uppercase">Partners</h2>
-              <div class="md:flex flex-wrap -m-4 lg:mt-16">
-                <div id="card" class="card p-4 md:w-1/3  hover:bg-red-800">
-                  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                    <img class="lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/turbine.png" alt="blog">
+              <div class="mt-2 md:flex lg:flex-wrap lg:mt-16">
+                <div id="" class=" p-12 hover:bg-red-800">
+                  <div class="border-2 border-gray-200 rounded-lg overflow-hidden">
+                    <img class="sm:w-auto lg:h-40 md:h-40 sm:h-40 w-full object-contain object-center p-4" src="../public/img/turbine.png" alt="blog">
                     <div class="p-6">
                       <h1 class="tracking-widest text-center text-2xl title-font font-semibold text-primary mb-6 uppercase">Wind Turbines</h1>
                       <a id="clickHere" class="text-lg text-primary underline hover:bg-gray-100 hover:opacity-3 hover:text-gray-600" href="/partners">click here</a>
